--- a/recipes/banana-bread.html
+++ b/recipes/banana-bread.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Banana Bread Recipe</title>
 </head>
 <body>
     <h1>Banana Bread</h1>
+    <img src="../img/banana-bread-feature-2-500x500.webp" alt="A picture of banana bread">
+    <h2>Description</h2>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>2 cups all-purpose flour</li>
+        <li>1 teaspoon baking soda</li>
+        <li>¼ teaspoon salt</li>
+        <li>½ cup butter</li>
+        <li>¾ cup brown sugar</li>
+        <li>2 eggs, beaten</li>
+        <li>2 ⅓ cups mashed overripe bananas</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Preheat oven to 350 degrees F (175 degrees C). Lightly grease a 9x5 inch loaf pan.</li>
+        <li>In a large bowl, combine flour, baking soda and salt. In a separate bowl, cream together butter and brown sugar. Stir in eggs and mashed bananas until well blended. Stir banana mixture into flour mixture; stir just to moisten. Pour batter into prepared loaf pan.</li>
+        <li>Bake in preheated oven for 60 to 65 minutes, until a toothpick inserted into center of the loaf comes out clean. Let bread cool in pan for 10 minutes, then turn out onto a wire rack.</li>
+    </ol>
 </body>
 </html>
