--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/banana-bread.html">Banana Bread</a></li>
+        <li><a href="recipes/cookie.html">Chocolate Chip Cookies</a></li>
+        <li><a href="recipes/apple-crisp.html">Apple Crisp</a></li>
+    </ul>
 </body>
 </html>
