--- a/recipes/cookie.html
+++ b/recipes/cookie.html
@@ -7,7 +7,7 @@
     <title>Cookie Recipe</title>
 </head>
 <body>
-    <h1>Chocolate Chip Cookie</h1>
+    <h1>Chocolate Chip Cookies</h1>
     <img src="../img/BAKERY-STYLE-CHOCOLATE-CHIP-COOKIES-9-637x637-1-550x550.jpg" alt="A picture of chocolate chip cookies">
     <h2>Description</h2>
     <h3>Ingredients</h3>
